--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <h1>Sanskari Babuji Magic</h1>
 <p>Write a message filled with hindi slangs and babuji will make your message a little sanskari...</p>
 </div>
+
+<div class="container">
+<textarea id="myTextarea" placeholder="Apne dushman ke liye kuch baatein...">Your desi curse words goes here...</textarea><br><br>
 <div class="pics">
   <img src="img/sanskar.png" id="sanskar" alt="">
   <img src="img/slang.png" alt="" id="slang">
 </div>
-<div class="container">
-<textarea rows="10" cols="50" id="myTextarea" placeholder="Apne dushman ke liye kuch baatein..."></textarea><br><br>
 <h5>Sanskari Filtered Message</h5>
 <div class="result" id="result">
 </div>
@@ -47,7 +48,7 @@ function myFunction() {
 let y = x.replace(/madarchod/ig, "maa ka pyaara").replace(/kutt[ae]/ig, "raja").replace(/kamin[ae]y?/ig, "dost")
 .replace(/kutton/ig, "doston").replace(/b[ae]?h?[ae]?nchod/ig, "bhai").replace(/may[ie]e?yaa?chod/ig, "mayi ka pyaara")
 .replace(/l[a][u]?[o]?[v]?[dr][ea]/ig, "huzoor").replace(/chutiy[ae]/ig, "ustad")
-.replace(/bhosdi\s?(ke|ka)?/ig, "bhole").replace(/harami/ig,"harilal");
+.replace(/bhosdi\s?(ke|ka)?/ig, "bhole").replace(/harami/ig,"harilal").replace(/kutiya/ig,"mukhiya");
 document.getElementById('result').innerHTML = y;
 }
 </script>
